SERVER-18250 On transition from journal to no-journal, run WT recovery.